Bug 1791169 - Backed out changeset 9d358a4c4bb5 for causing bug 1776823. rs=backout